# DeltaCATAgentMemory

./: .gitignore  AGENTS.md  README.md  TMUX.md  pyproject.toml
.beads/: metadata.json
.kiro/agents/: dcam.json
dcam/: __init__.py  agent_instructions.py  branch_catalog.py  branch_store.py  bridge.py  claude_code.py  cli.py  compact.py  decisions.py  delta_catalog.py  delta_store.py  deltacat_catalog.py  extract.py  feed.py  interactive.py  json_catalog.py  kiro.py  local_catalog.py  mcp_server.py  models.py  orchestrator.py  project.py  resolver.py  reviews.py  search.py  store.py  tmux.py
hooks/: dcam-claude-context.sh  dcam-claude-sync.sh  dcam-pre-tool.sh
tests/: test_bridge.py  test_compact.py  test_kiro.py  test_models.py
