[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dcam"
version = "0.1.0"
description = "DeltaCAT Agent Memory — Kiro + DeltaCAT + Beads integration"
requires-python = ">=3.9"
dependencies = [
    "pyarrow>=14.0",
    "mcp>=1.0",
]

[project.scripts]
dcam = "dcam.cli:main"

[tool.setuptools.packages.find]
include = ["dcam*"]
