[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dcam"
version = "0.1.0"
description = "DeltaCAT Agent Memory — Kiro + DeltaCAT + Beads integration"
requires-python = ">=3.9"
# pyarrow >= 20 has manylinux_2_17 cp39/310/311/312 wheels covering AL2 glibc,
# so plain `pip install -e .` no longer falls back to source builds (which need
# a C++ toolchain). Stay on the upstream LTS line.
dependencies = [
    "pyarrow>=20.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
deltacat = ["deltacat"]

[project.scripts]
dcam = "dcam.cli:main"

[tool.setuptools.packages.find]
include = ["dcam*"]
